--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
             <div class="slide-load"></div> 
             <div class="slide-load"></div>   
           </div>
-          <div class="more">
+          <div class="more" href="feature.html">
             ดูเพิ่มเติม
           </div>
         </section>
